[tool.poetry]
name = "qdrant_demo"
version = "0.1.0"
description = "Qdrant vector similarity engine demo"
authors = ["Andrey Vasnetsov <andrey@vasnetsov.com>"]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.103.1"
uvicorn = "^0.18.3"
psutil = "^5.7.3"
pandas = "^1.1.5"
loguru = "^0.5.3"
requests = "^2.25.1"
tqdm = "^4.66.1"
qdrant-client = {extras = ["fastembed"], version = "^1.6.3"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
